# truescrub

./: .bazelignore  .bazelproject  .bazelrc  .dockerignore  .gitignore  .npmrc  BUILD  DEVELOPERS.md  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  Tiltfile  WORKSPACE  deploy.bazelrc  jest.config.js  package.json  pip_deps.BUILD  pnpm-lock.yaml  pyproject.toml  requirements-dev.in  requirements.bzl  requirements.in  requirements.txt  requirements_lock.txt  setup.py  tsconfig.json
.mypy/: config
client/: BUILD  TrueScrubClient.tsx  esbuild.config.mjs  style.css  sws.toml  ts_library.bzl
client/api/: BUILD  truescrub.ts
client/components/: AccoladeCard.tsx  BUILD  ErrorState.tsx  Footer.tsx  LoadingState.tsx  Navbar.tsx
client/entrypoints/: BUILD  accolades.ts
client/pages/: AccoladesPage.test.ts  AccoladesPage.tsx  BUILD  HomePage.tsx  LeaderboardPage.test.ts  LeaderboardPage.tsx  MatchesTab.tsx  MatchmakingPage.tsx  NotFoundPage.tsx  ProfilePage.test.ts  ProfilePage.tsx  SkillGroupsPage.test.ts  SkillGroupsPage.tsx  TeamRecordsTab.tsx  skill_group.test.ts  skill_group.ts
client/public/: BUILD  index.template.html  mkindex.py  mkindex_test.py  template.jq
client/rules/: esbuild.bzl  tailwind.bzl
client/utils/: BUILD  skill_group.ts
container/: BUILD
k8s/apps/client/: deployment.yaml  kustomization.yaml  service.yaml
k8s/apps/truescrub/: BUILD  grpcroute.yaml  httproute.yaml  kustomization.yaml  networkpolicy.yaml  truescrub.yaml
k8s/overlays/dev/: gateway.yaml  kustomization.yaml  namespace.yaml
patches/: BUILD  aspect_rules_py_hermetic_launcher_fallback.patch  aspect_rules_py_interpreter_layer.patch  aspect_rules_py_workspace_grouping.patch  envoy_api_bzlmod.patch
proto/: BUILD  common.proto  highlights_service.proto  leaderboard_service.proto  matchmaking_service.proto  profile_service.proto  season_service.proto
scripts/: BUILD  python.sh  regen_protos.sh  setup_bazel.sh  setup_dev_env.sh
tests/: BUILD  db_test_utils.py  real_game_states_fixture.json  sample_game_states.json  sample_seasons.toml  test_accolades.py  test_api.py  test_game_state_log.py  test_game_state_log_dir.py  test_grpc_web.py  test_gsi_http_service.py  test_highlights.py  test_highlights_service.py  test_integration.py  test_integration_real_data.py  test_leaderboard_service.py  test_log_translator.py  test_match_days.py  test_matchmaking.py  test_matchmaking_service.py  test_models.py  test_profile_service.py  test_recalculate.py  test_riegeli_loader.py  test_rpc.py  test_season_service.py  test_seasoncfg.py  test_segmented_log.py  test_segmented_log_dir.py  test_state_parser.py  test_state_parsing.py  test_state_serialization.py  test_state_writer.py  test_teameval.py
truescrub/: BUILD  __init__.py  __main__.py  accolades.ini  accolades.py  achievements.py  api.py  application.py  db.py  envconfig.py  highlights.py  interceptors.py  matchmaking.py  models.py  queue_consumer.py  recalculate.py  rpc.py  seasoncfg.py  state_serialization.py  teameval.py  util.py
truescrub/proto/: BUILD  achievements.json  game_state.proto  profile.proto  skill_groups.json
truescrub/statewriter/: BUILD  __init__.py  game_state_log.py  segmented_log.py  state_parsing.py  state_serialization.py  state_writer.py
truescrub/templates/: accolades.html  index.html  layout.html  leaderboard.html  macros.html  matches.html  matchmaking.html  profile.html  skill_groups.html  team_details.html  team_records.html
truescrub/tools/: BUILD  __init__.py  compact_log.py  dbsurgery.py  genetic.py  gstrans.py  log_translator.py  logquery.py  optuna_match.py  printaccolades.py  recover_log.py  surgery.py  teameval.py
truescrub/updater/: BUILD  __init__.py  __main__.py  evaluator.py  players.ini  recalculate.py  remapper.py  state_loader.py  state_parser.py  updater.py
