bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.3")
bazel_dep(name = "aspect_rules_jest", version = "0.25.2")
bazel_dep(name = "aspect_rules_py", version = "2.0.0-alpha.4")
bazel_dep(name = "aspect_rules_ts", version = "3.9.1")
bazel_dep(name = "bazel_lib", version = "3.5.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "grpc", version = "1.82.0")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "llvm", version = "0.8.11")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "riegeli", version = "0.0.0-20250822-9f2744d")
bazel_dep(name = "rules_kustomize", version = "0.5.3")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "rules_python", version = "2.2.0")

single_version_override(
    module_name = "aspect_rules_py",
    patch_strip = 1,
    patches = [
        "//patches:aspect_rules_py_interpreter_layer.patch",
        "//patches:aspect_rules_py_workspace_grouping.patch",
    ],
)

single_version_override(
    module_name = "envoy_api",
    version = "0.0.0-20260130-84e8436",
)

single_version_override(
    module_name = "googleapis",
    version = "0.0.0-20260623-b6f9ff05",
)

single_version_override(
    module_name = "highwayhash",
    version = "0.0.0-20240305-5ad3bf8.bcr.1",
)

register_toolchains("@llvm//toolchain:all")

interpreters = use_extension("@aspect_rules_py//py:extensions.bzl", "python_interpreters")
interpreters.toolchain(
    python_version = "3.12",
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

uv = use_extension("@aspect_rules_py//uv:extensions.bzl", "uv")
uv.declare_hub(hub_name = "pypi")
uv.project(
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
)
use_repo(uv, "pypi")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:7ee09f36862efbdbf70422db263e411c2618409ca46faa555bd5b636155307df",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.pull(
    name = "sws_base",
    digest = "sha256:6acea6260b14e08dda986361e42640082fbfaab8d88c327de532bb13a3b22994",
    image = "docker.io/joseluisq/static-web-server",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
    "sws_base",
    "sws_base_linux_amd64",
    "sws_base_linux_arm64",
)

################
## Typescript ##
################

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
