[project]
name = "truescrub"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "Flask==3.1.3",
    "waitress==3.0.2",
    "trueskill==0.4.5",
    "pytest==9.0.3",
    "build==1.5.0",
    "setuptools==82.0.1",
    "numpy==2.4.6",
    "deap==1.4.4",
    "optuna==4.9.0",
    "tqdm==4.68.1",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]
